--- a/TabsHolder/TabsHolder.csproj
+++ b/TabsHolder/TabsHolder.csproj
@@ -83,7 +83,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>app_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\app_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -131,29 +131,29 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AddTabWindow.xaml.cs">
+    <Compile Include="View\AddTabWindow.xaml.cs">
       <DependentUpon>AddTabWindow.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="AddTabWinViewModel.cs" />
+    <Compile Include="ViewModels\AddTabWinViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AppContext.cs" />
-    <Compile Include="FileSystemHelpers.cs" />
-    <Compile Include="MessengerStatic.cs" />
-    <Compile Include="TabItemService.cs" />
-    <Compile Include="MainWinViewModel.cs" />
-    <Compile Include="TabeItem.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Data\AppContext.cs" />
+    <Compile Include="Services\FileSystemHelpers.cs" />
+    <Compile Include="ViewModels\MessengerStatic.cs" />
+    <Compile Include="Services\TabItemService.cs" />
+    <Compile Include="ViewModels\MainWinViewModel.cs" />
+    <Compile Include="Model\TabeItem.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="AddTabWindow.xaml">
+    <Page Include="View\AddTabWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -189,7 +189,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="app_icon.ico" />
+    <Resource Include="Resources\app_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
