--- a/TabsHolder/TabsHolder.csproj
+++ b/TabsHolder/TabsHolder.csproj
@@ -131,6 +131,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="View\AddTabWindow.xaml.cs">
       <DependentUpon>AddTabWindow.xaml</DependentUpon>
