--- a/TabsHolder/TabsHolder.csproj
+++ b/TabsHolder/TabsHolder.csproj
@@ -132,6 +132,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Data\Config.cs" />
     <Compile Include="Data\Session.cs" />
     <Compile Include="Services\XmlSerializerService.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
