--- a/Installer/Installer.csproj
+++ b/Installer/Installer.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BuildHolder.cs" />
+    <Compile Include="MessengerStatic.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
