--- a/TabsHolder/TabsHolder.csproj
+++ b/TabsHolder/TabsHolder.csproj
@@ -140,7 +140,7 @@
     <Compile Include="Services\XmlSerializerService.cs" />
     <Compile Include="ViewModels\SettingsWinViewModel.cs" />
     <Compile Include="ViewModels\RecentlyUsedWinViewModel.cs" />
-    <Compile Include="ViewModels\RenameTabViewModel.cs" />
+    <Compile Include="ViewModels\EditTabViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="View\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
